--- a/Organization-Management-ERP/src/app/register/register.component.html
+++ b/Organization-Management-ERP/src/app/register/register.component.html
@@ -1,3 +1,46 @@
-<p>
-  register works!
-</p>
+<ion-content class ="dark-background">
+	
+  <ion-button  icon-only (click) = "closeModal();" class = "close-button" ><ion-icon name = "close" color = "secondary"></ion-icon></ion-button>
+    <h1 style = "color:white !important" >Registration</h1>
+    <div class = "input-information">
+      <ion-item class = "dark-background">
+      <ion-label position = "floating">Email Address</ion-label>
+      <ion-input type="text" [(ngModel)] = "email"></ion-input>
+      </ion-item>
+      <ion-item class = "dark-background">
+      <ion-label position = "floating">Confirm Email Address</ion-label>
+      <ion-input type="text" [(ngModel)] = "emailC"></ion-input>
+      </ion-item>
+      <ion-item class = "dark-background">
+      <ion-label position = "floating" >Password</ion-label>
+      <ion-input type="password"[(ngModel)] = "password" ></ion-input>
+      </ion-item >
+        <ion-item class = "dark-background">
+      <ion-label position = "floating" >Confirm Password</ion-label>
+      <ion-input type="password" [(ngModel)] = "passwordC"></ion-input>
+      </ion-item >
+      <ion-item class = "dark-background">
+      <ion-label position = "floating">First Name</ion-label>
+      <ion-input type="text" [(ngModel)] = "firstname"></ion-input>
+      </ion-item >
+      <ion-item class = "dark-background">
+      <ion-label position = "floating">Last Name</ion-label>
+      <ion-input type="text" [(ngModel)] = "lastname"></ion-input>
+      </ion-item>
+      <div >
+      <ion-item class = "dark-background" *ngIf="isManager == true">
+      <ion-label position = "floating">Organization Name</ion-label>
+      <ion-input type="text" [(ngModel)] = "organizationName"></ion-input>
+      </ion-item>
+      </div>
+      <div >
+      <ion-item class = "dark-background" *ngIf="isManager == false" >
+      <ion-label position = "floating">Organization Id</ion-label>
+      <ion-input type="text" [(ngModel)] = "organizationId"></ion-input>
+      </ion-item>
+      </div>
+    </div>
+      <div class = "next-step">		
+        <ion-button color = "secondary" (click) = "finishRegistration()"><span style = "color:black">Finish Registration</span></ion-button>
+      </div>
+  </ion-content>
