--- a/Organization-Management-ERP/src/app/tab3/tab3.page.html
+++ b/Organization-Management-ERP/src/app/tab3/tab3.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+     <ion-button icon-only (click) = "logOut()">
+      <ion-icon name="log-out-outline" ></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
