--- a/Organization-Management-ERP/src/app/tabs/tabs.page.html
+++ b/Organization-Management-ERP/src/app/tabs/tabs.page.html
@@ -2,27 +2,27 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" *ngIf = "!isManager">
-      <ion-icon name="triangle"></ion-icon>
+      <ion-icon name="briefcase-outline"></ion-icon>
       <ion-label>Tasks</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" *ngIf = "isManager">
-      <ion-icon name="ellipse"></ion-icon>
+    <ion-icon name="document-text-outline"></ion-icon>
       <ion-label>Report</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" *ngIf = "!isManager">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="alarm-outline"></ion-icon>
       <ion-label>Schedule</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4" *ngIf = "isManager">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="person-add-outline"></ion-icon>
       <ion-label>Assign</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
