--- a/Organization-Management-ERP/src/app/tab4/tab4.page.html
+++ b/Organization-Management-ERP/src/app/tab4/tab4.page.html
@@ -4,44 +4,57 @@
     <h1 style = "color:white !important" >Create New Task</h1>
     <ion-card id = "registration-card">
     <div class = "input-information">
+
       <ion-item class = "dark-background">
       <ion-label position = "floating">Task Name</ion-label>
       <ion-input type="text" [(ngModel)] = "taskName"></ion-input>
       </ion-item>
+
       <ion-item class = "dark-background">
+      <ion-label position = "floating">Deadline</ion-label>
       <ion-datetime displayFormat = "MMM DD, YYYY, HH:mm" placeholder= "Deadline" display-timezone="utc" [(ngModel)] = "deadline" ></ion-datetime>
       </ion-item>
-      <ion-item class = "dark-background">
-      <ion-label position = "floating" >Priority</ion-label>
-      <ion-input type="password"[(ngModel)] = "password" ></ion-input>
+
+      <ion-item class = "dark-background" (click)="presentPrioritySelector()">
+      <ion-label position = "floating" >priority</ion-label>
+      <ion-input type="text" [(ngModel)] = "priorityText" style="color:white"></ion-input>
       </ion-item >
-        <ion-item class = "dark-background">
-      <ion-label position = "floating" >Confirm Password</ion-label>
-      <ion-input type="password" [(ngModel)] = "passwordC"></ion-input>
-      </ion-item >
+
       <ion-item class = "dark-background">
-      <ion-label position = "floating">First Name</ion-label>
-      <ion-input type="text" [(ngModel)] = "firstname"></ion-input>
+          <ion-label>Direct Assignee</ion-label>
+          <ion-checkbox [(ngModel)] = "isDirectAssignee"></ion-checkbox>
       </ion-item >
-      <ion-item class = "dark-background">
-      <ion-label position = "floating">Last Name</ion-label>
-      <ion-input type="text" [(ngModel)] = "lastname"></ion-input>
+
+    <div *ngIf = "isDirectAssignee">
+    <ion-item lines="none" class = "searchbar-container">
+        <ion-input id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "Search" ></ion-input>
+    </ion-item>
+
+     <ion-list class = "search-list" *ngIf = "$userSearch && $userSearch.length > 0">
+    <ion-item *ngFor="let user of organizationMembers" tappable   (click)="chooseUser(user)" class ="dark-background">
+      <ion-item class ="dark-background">
+        <ion-label>  
+          <h2>{{ user.firstname }} {{ user.lastname}} </h2>
+          <h3>    {{ user.id}}</h3>
+        </ion-label>
       </ion-item>
-      <div >
-      <ion-item class = "dark-background" *ngIf="isManager == true">
-      <ion-label position = "floating">Organization Name</ion-label>
-      <ion-input type="text" [(ngModel)] = "organizationName"></ion-input>
+    </ion-item>
+  </ion-list>
+
+    <ion-item class ="dark-background" *ngIf = "selectedAssignee">
+        <ion-label>  
+          <h2>Selected Assignee</h2>
+          <h3>{{selectedAssignee.firstname }} {{ selectedAssignee.lastname}} </h3>
+          <h4>    {{ selectedAssignee.id}}</h4>
+        </ion-label>
       </ion-item>
-      </div>
-      <div >
-      <ion-item class = "dark-background" *ngIf="isManager == false" >
-      <ion-label position = "floating">Organization Id</ion-label>
-      <ion-input type="text" [(ngModel)] = "organizationId"></ion-input>
-      </ion-item>
-      </div>
+
     </div>
+</div>
+
+
       <div class = "next-step">		
-        <ion-button color = "secondary" (click) = "finishRegistration()"><span style = "color:black">Finish Registration</span></ion-button>
+        <ion-button color = "secondary" (click) = "assignTask()"><span style = "color:black">Assign Task</span></ion-button>
       </div>
       </ion-card>
   </ion-content>
