--- a/Organization-Management-ERP/src/app/tab5/tab5.page.html
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar class="dark-background">
      <ion-button icon-only (click) = "logOut()">
       <ion-icon name="log-out-outline" ></ion-icon>
     </ion-button>
@@ -7,35 +7,38 @@
 </ion-header>
  
 <ion-content class ="dark-background">
-  <div class = "input-information"> 
-    <h1 style = "color:white !important" >Employee Profile</h1>
-    <ion-list> 
-      
-      <!-- <ion-list-header class ="dark-background">
-        Employee Profile
-      </ion-list-header> -->
-      
-      <ion-item class = "dark-background">
-        <ion-label>
-          <h2>First Name</h2>
-          <h3>{{usrData.firstname}}</h3>
-        </ion-label>
-      </ion-item>
-      
-      <ion-item class = "dark-background">
-        <ion-label>
-          <h2>Last Name</h2>
-          <h3>{{usrData.lastname}}</h3>
-        </ion-label>
-      </ion-item>
-      
-      <ion-item class = "dark-background">
-        <ion-label>
-          <h2>Email Address</h2>
-          <h3>{{usrData.email}}</h3>
-        </ion-label>
-      </ion-item>
+  <!-- <ion-card class = "dark-background"> -->
 
-    </ion-list>
-  </div>
+    <div class = "dark-background"> 
+      <h1 style = "color:white !important" >Employee Profile</h1>
+      <ion-list class = "input-information"> 
+        
+        <!-- <ion-list-header class ="dark-background">
+          Employee Profile
+        </ion-list-header> -->
+        
+        <ion-item class="input-information">
+          <ion-label>
+            <h2>First Name</h2>
+            <h3>{{usrData.firstname}}</h3>
+          </ion-label>
+        </ion-item>
+        
+        <ion-item class="input-information">
+          <ion-label>
+            <h2>Last Name</h2>
+            <h3>{{usrData.lastname}}</h3>
+          </ion-label>
+        </ion-item>
+        
+        <ion-item class="input-information">
+          <ion-label>
+            <h2>Email Address</h2>
+            <h3>{{usrData.email}}</h3>
+          </ion-label>
+        </ion-item>
+        
+      </ion-list>
+    </div>
+  <!-- </ion-card> -->
 </ion-content>
