--- a/Organization-Management-ERP/src/app/tab5/tab5.page.scss
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.scss
@@ -3,7 +3,24 @@
     color:white
 }
 .input-information{
-ion-item{
+// ion-item{
+    border: none;
+    margin: none;
+    margin: 0;
+    padding-bottom: 1rem;
+    margin-top: 2rem;
+    color: white;
     --background: #3c4042;
 }
+.gray-background{
+    --background: #3c4042;
 }
+// #input-information{
+//     border: none;
+//     margin: none;
+//     margin: 0;
+//     padding-bottom: 1rem;
+//     margin-top: 2rem;
+//     --background: #3c4042;
+// }
+// }
