--- a/Organization-Management-ERP/src/app/tab1/tab1.page.html
+++ b/Organization-Management-ERP/src/app/tab1/tab1.page.html
@@ -7,11 +7,31 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card class = "card"  *ngFor = "let task of tasks">
+    <ion-card-header [class] ="task.style_class" >
+      <ion-card-subtitle >
+        <ion-grid>
+          <ion-row>
+            <ion-col *ngIf = "task.priority == 1" size = "8">
+              Low Priority
+            </ion-col>
+            <ion-col *ngIf = "task.priority == 2" size = "8">
+              Medium Priority
+            </ion-col>
+            <ion-col *ngIf = "task.priority == 3" size = "8">
+              High Priority
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+    </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content class = "card-content">
+    </ion-card-content>
+  </ion-card>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-card class = "card"  *ngIf = "tasks.length ==0">
+    <ion-card-header class ="card-header">
+      <ion-card-subtitle > You have no tasks at this moment!</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
 </ion-content>
