--- a/Organization-Management-ERP/src/app/tab5/tab5.page.html
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.html
@@ -7,49 +7,56 @@
 </ion-header>
  
 <ion-content class ="dark-background">
-  <!-- <ion-card class = "dark-background"> -->
-
     <div class = "dark-background"> 
       <h1 style = "color:white !important" >Employee Profile</h1>
-      <ion-list class = "input-information"> 
-        
-        <!-- <ion-list-header class ="dark-background">
-          Employee Profile
-        </ion-list-header> -->
-        
-        <ion-item class="input-information">
-          <ion-label>
-            <h2>First Name</h2>
-            <h3>{{usrData.firstname}}</h3>
-          </ion-label>
-        </ion-item>
-        
-        <ion-item class="input-information">
-          <ion-label>
-            <h2>Last Name</h2>
-            <h3>{{usrData.lastname}}</h3>
-          </ion-label>
-        </ion-item>
-        
-        <ion-item class="input-information">
-          <ion-label>
-            <h2>Email Address</h2>
-            <h3>{{usrData.email}}</h3>
-          </ion-label>
-        </ion-item>
-        
-      </ion-list>
 
       <ion-item>
-        <ion-label>Apple</ion-label>
-        <ion-toggle slot="start" name="apple" color="secondary" checked (ionChange)="onChange()" [(ngModel)]="status"></ion-toggle>
+        <ion-label>Edit Mode</ion-label>
+        <ion-toggle slot="start" name="editMode" color="secondary" (ionChange)="onChange()" [(ngModel)]="status"></ion-toggle>
       </ion-item>
+      <!-- <ion-button>
+        <ion-label>Edit Mode</ion-label>
+        <ion-icon slot="start" name="edit mode" [(ngModel)]="status" (click) = onChange()></ion-icon>
+      </ion-button> -->
 
-      <div *ngIf = "status">
+      <div *ngIf="status; else elseBlock">
         <ion-item lines="none" class = "searchbar-container">
-            <ion-input id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "Search" ></ion-input>
+          <ion-input id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "First Name" ></ion-input>
+        </ion-item>
+        <ion-item lines="none" class = "searchbar-container">
+          <ion-input id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "Last Name" ></ion-input>
+        </ion-item>
+        <ion-item lines="none" class = "searchbar-container">
+          <ion-input id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "Email Address" ></ion-input>
         </ion-item>
       </div>
+
+      <ng-template #elseBlock>
+        <ion-list class = "input-information"> 
+          
+          <ion-item class="input-information">
+            <ion-label>
+              <h2>First Name</h2>
+              <h3>{{usrData.firstname}}</h3>
+            </ion-label>
+          </ion-item>
+          
+          <ion-item class="input-information">
+            <ion-label>
+              <h2>Last Name</h2>
+              <h3>{{usrData.lastname}}</h3>
+            </ion-label>
+          </ion-item>
+          
+          <ion-item class="input-information">
+            <ion-label>
+              <h2>Email Address</h2>
+              <h3>{{usrData.email}}</h3>
+            </ion-label>
+          </ion-item>
+          
+        </ion-list>
+      </ng-template>
+
     </div>
-  <!-- </ion-card> -->
 </ion-content>
