--- a/Organization-Management-ERP/src/app/tab2/tab2.page.html
+++ b/Organization-Management-ERP/src/app/tab2/tab2.page.html
@@ -18,4 +18,22 @@
     <ion-label>Declined Tasks</ion-label>
   </ion-segment-button>
 </ion-segment>
+   <ion-list >
+    <ion-item *ngFor="let task of mainTasks" tappable class ="dark-background">
+       <ion-label text-wrap> 
+          <h2>{{task.taskName}}</h2>
+          <h3 *ngIf = "task.isAccepted">accepted by: {{task.firstname}}  {{task.lastname}} </h3>
+          <h3 *ngIf = "task.isAccepted == false">declined by: {{task.firstname}}  {{task.lastname}} </h3>
+          <ion-row>
+            <ion-col>
+              <h3 > Deadline: {{task.deadline}}  </h3>
+            </ion-col>
+            <ion-col>
+              <h3> priority: {{task.priority}}</h3>
+            </ion-col>
+          </ion-row>
+        
+       </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
