--- a/Organization-Management-ERP/src/app/tab4/tab4.page.html
+++ b/Organization-Management-ERP/src/app/tab4/tab4.page.html
@@ -1,6 +1,6 @@
 <ion-content class ="dark-background">
 	
-  <ion-button  icon-only (click) = "closeModal();" class = "close-button" ><ion-icon name = "close" color = "secondary"></ion-icon></ion-button>
+  <ion-button  icon-only  class = "close-button" ><ion-icon name = "close" color = "secondary"></ion-icon></ion-button>
     <h1 style = "color:white !important" >Create New Task</h1>
     <ion-card id = "registration-card">
     <div class = "input-information">
