--- a/Organization-Management-ERP/src/app/tab5/tab5.page.scss
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.scss
@@ -4,11 +4,11 @@
 }
 .input-information{
 // ion-item{
-    border: none;
-    margin: none;
-    margin: 0;
-    padding-bottom: 1rem;
-    margin-top: 2rem;
+    // border: none;
+    // margin: none;
+    // margin: 0;
+    // padding-bottom: 1rem;
+    // margin-top: 2rem;
     color: white;
     --background: #3c4042;
 }
@@ -16,11 +16,11 @@
     --background: #3c4042;
 }
 #input-information{
-    border: none;
-    margin: none;
-    margin: 0;
-    padding-bottom: 1rem;
-    margin-top: 2rem;
+    // border: none;
+    // margin: none;
+    // margin: 0;
+    // padding-bottom: 1rem;
+    // margin-top: 2rem;
     --background: #3c4042;
 }
 // #shadow-root{
