--- a/Organization-Management-ERP/src/app/tab5/tab5.page.html
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.html
@@ -17,19 +17,12 @@
       </ion-button> -->
 
       <div *ngIf="status; else elseBlock">
-        <ion-item lines="none" class = "searchbar-container">
-          <ion-input [(ngModel)]="firstname" id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "{{usrData.firstname}}" ></ion-input>
+        <ion-item lines="none" class="input-information">
+          <ion-input [(ngModel)]="firstname" placeholder= "{{usrData.firstname}}" ></ion-input>
         </ion-item>
-        <ion-item lines="none" class = "searchbar-container">
-          <ion-input [(ngModel)]="lastname" id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "{{usrData.lastname}}" ></ion-input>
+        <ion-item lines="none" class="input-information">
+          <ion-input [(ngModel)]="lastname" placeholder= "{{usrData.lastname}}" ></ion-input>
         </ion-item>
-        <!-- <ion-item lines="none" class = "searchbar-container">
-          <ion-input [(ngModel)]="phonenumber" id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "{{usrData.phonenumber}}" ></ion-input>
-        </ion-item> -->
-        <!-- <ion-item lines="none" class = "searchbar-container">
-          <ion-input [(ngModel)]="email" id="search_input" type="text" (ionChange)="searchUsers($event)" placeholder= "{{usrData.email}}" ></ion-input>
-        </ion-item> -->
-
 
         <ion-button [(ngModel)]="status" (click) = "confirmEdit()">
           confirm edit
@@ -37,16 +30,17 @@
       </div>
 
       <ng-template #elseBlock>
-        <ion-list class = "input-information"> 
+        <ion-list > 
           
-          <ion-item class="input-information">
-            <ion-label>
-              <h2>First Name</h2>
+          <ion-item class = "input-information">
+            <ion-label > 
+              First Name
+              <!-- <h2>First Name</h2> -->
               <h3>{{usrData.firstname}}</h3>
             </ion-label>
           </ion-item>
           
-          <ion-item class="input-information">
+          <ion-item class = "input-information">
             <ion-label>
               <h2>Last Name</h2>
               <h3>{{usrData.lastname}}</h3>
@@ -59,10 +53,24 @@
               <h3>{{usrData.email}}</h3>
             </ion-label>
           </ion-item>
+         
+          <ion-item class="input-information">
+            <ion-label>
+              <h2>Employee ID</h2>
+              <h3>{{usrData.id}}</h3>
+            </ion-label>
+          </ion-item>
           
+          <ion-item class="input-information">
+            <ion-label>
+              <h2>Organization ID</h2>
+              <h3>{{usrData.organizationId}}</h3>
+            </ion-label>
+          </ion-item>
         </ion-list>
       </ng-template>
-      <ion-item>
+
+      <ion-item class="dark-background">
         <ion-label>Edit Mode</ion-label>
         <ion-toggle slot="start" name="editMode" color="secondary" (ionChange)="onChange()" [(ngModel)]="status"></ion-toggle>
       </ion-item>
