--- a/Organization-Management-ERP/src/app/tab5/tab5.page.scss
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.scss
@@ -8,9 +8,10 @@
     // margin: none;
     // margin: 0;
     // padding-bottom: 1rem;
-    // margin-top: 2rem;
+    // margin-top: 1rem;
     color: white;
     --background: #3c4042;
+    // --mar
 }
 .gray-background{
     --background: #3c4042;
