--- a/Organization-Management-ERP/src/app/tab5/tab5.page.html
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.html
@@ -30,12 +30,9 @@
       </div>
 
       <ng-template #elseBlock>
-        <ion-list > 
-          
           <ion-item class = "input-information">
             <ion-label > 
-              First Name
-              <!-- <h2>First Name</h2> -->
+              <h2>First Name</h2>
               <h3>{{usrData.firstname}}</h3>
             </ion-label>
           </ion-item>
@@ -67,7 +64,6 @@
               <h3>{{usrData.organizationId}}</h3>
             </ion-label>
           </ion-item>
-        </ion-list>
       </ng-template>
 
       <ion-item class="dark-background">
