--- a/Organization-Management-ERP/src/app/tab5/tab5.page.html
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.html
@@ -1,13 +1,16 @@
 <ion-header >
   <ion-toolbar class="dark-background">
      <ion-button icon-only (click) = "logOut()">
-      <ion-icon name="log-out-outline" ></ion-icon>
+      <ion-icon name="log-out-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
  
 <ion-content class ="dark-background">
-    <div class = "dark-background"> 
+    <div class = "dark-background-centered"> 
+      <ion-avatar class="center-avatar">
+        <img src="https://www.w3schools.com/howto/img_avatar.png">
+      </ion-avatar>
       <h1 style = "color:white !important" >Employee Profile</h1>
 
 
