--- a/Organization-Management-ERP/src/app/tab5/tab5.page.scss
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.scss
@@ -1,3 +1,11 @@
+.center-avatar{
+    margin: auto;
+}
+.dark-background-centered{
+    text-align: center;
+    --background: black;
+    color:white
+}
 .dark-background{
     --background: black;
     color:white
