--- a/Organization-Management-ERP/src/app/tab5/tab5.page.html
+++ b/Organization-Management-ERP/src/app/tab5/tab5.page.html
@@ -22,7 +22,7 @@
           <ion-input *ngIf = "usrData.phoneNumber" [(ngModel)]="phoneNumber" type="text" placeholder= "{{usrData.phoneNumber}}" ></ion-input>
           <ion-input *ngIf = "usrData.phoneNumber == undefined" [(ngModel)]="phoneNumber" type="text" placeholder= "enter phone number" ></ion-input>
         </ion-item>
-        <ion-button [(ngModel)]="status" (click) = "confirmEdit()" color = "secondary"> 
+        <ion-button [(ngModel)]="status" (click) = "confirmEdit()" color = "secondary" id = "edit-but"> 
           confirm edit
         </ion-button>      
       </div>
@@ -48,6 +48,20 @@
             <ion-label>
               <h2>Phone Number</h2>
               <h3 ><span *ngIf = "!usrData.phoneNumber">Not Yet Set</span>{{usrData.phoneNumber}}</h3>
+            </ion-label>
+          </ion-item>
+
+          <ion-item class="input-information">
+            <ion-label>
+              <h2>Organization Id</h2>
+              <h3>{{usrData.organizationId}}</h3>
+            </ion-label>
+          </ion-item>
+
+          <ion-item class="input-information">
+            <ion-label>
+              <h2>Employee ID</h2>
+              <h3>{{usrData.id}}</h3>
             </ion-label>
           </ion-item>
           
