--- a/Organization-Management-ERP/src/app/tab4/tab4.page.html
+++ b/Organization-Management-ERP/src/app/tab4/tab4.page.html
@@ -11,7 +11,7 @@
     <div class = "input-information">
 
       <ion-item class = "background">
-      <ion-label position = "floating">Task Name</ion-label>
+      <ion-label position = "floating" >Task Name</ion-label>
       <ion-input type="text" [(ngModel)] = "taskName"></ion-input>
       </ion-item>
 
@@ -22,7 +22,7 @@
 
       <ion-item class = "background" (click)="presentPrioritySelector()">
       <ion-label position = "floating" >priority</ion-label>
-      <ion-input type="text" [(ngModel)] = "priorityText" style="color:white"></ion-input>
+      <ion-input type="text" [(ngModel)] = "priorityText" ></ion-input>
       </ion-item >
 
       <ion-item class = "background">
