--- a/Organization-Management-ERP/src/app/tab4/tab4.page.scss
+++ b/Organization-Management-ERP/src/app/tab4/tab4.page.scss
@@ -48,16 +48,16 @@ ion-content{
 }
 
 
-// .background{
-//     --background: var(--sap-content-background);
-//     color: var(--sap-content-font-color);
-//     h2{
-//         font-size: 1.1rem;
-//     }
-//     h3{
-//         font-size:0.8rem;
-//     }
-// }
+.background{
+    --background: var(--sap-content-background);
+    color: var(--sap-content-font-color);
+    h2{
+        font-size: 1.1rem;
+    }
+    h3{
+        font-size:0.8rem;
+    }
+}
 #registration-card{
     border: none;
     margin: none;
