--- a/Organization-Management-ERP/src/app/login/login.page.html
+++ b/Organization-Management-ERP/src/app/login/login.page.html
@@ -1,8 +1,8 @@
 <ion-content padding class = "background-photo">
  <img src="../../assets/images/logo.png"/>
   <ion-card class = "login-card" >
-     <p> Click <a style = "color:#45e437;" (click) = "goToRegister(true)"><u><b>here</b></u></a>  to register as a manager for a new task team</p>
-    <p> Click <a style = "color:#45e437;" (click) = "goToRegister(false)"><u><b>here</b></u></a> to register as a worker for your task team</p>
+     <p> Click <a style = "color#3F5161;" (click) = "goToRegister(true)"><u><b>here</b></u></a>  to register as a manager for a new task team</p>
+    <p> Click <a style = "color:#3F5161;" (click) = "goToRegister(false)"><u><b>here</b></u></a> to register as a worker for your task team</p>
     <ion-item class = "background-primary">
     <ion-label position = "floating">Email Address</ion-label>
     <ion-input type="text" [(ngModel)] = "email"></ion-input>
@@ -12,7 +12,7 @@
     <ion-input type="password" [(ngModel)] = "password"></ion-input>
     </ion-item>
     <div style = "text-align:center;margin-bottom:3rem;">
-      <ion-button color = "secondary" (click) = "login()" class = ""> <span style = "color:black">login </span></ion-button>
+      <ion-button color = "secondary" (click) = "login()" class = ""> <span style = "color:white">login </span></ion-button>
     </div> 
   </ion-card>
   <!-- <ion-spinner name="lines"></ion-spinner> -->
