--- a/Organization-Management-ERP/src/app/login/login.page.scss
+++ b/Organization-Management-ERP/src/app/login/login.page.scss
@@ -4,8 +4,8 @@
     // margin-top:13vh;
     opacity: 0.9;
     border-radius: 0px;
-    background: #202124;
-    color:white;
+    background: var(--sap-content-background);
+    color:black;
     p{
         padding-left:1rem;
         margin-top: 1.8rem;
@@ -23,10 +23,11 @@
  }
 
 ion-content{
---background: black;
+--background: #3F5161;
 }
 
 .background-primary {
---background: #202124;
-color:white;
+    opacity: 0.8;
+--background:  var(--sap-content-background);
+color:black;
 }
