--- a/Organization-Management-ERP/src/app/tab2/tab2.page.html
+++ b/Organization-Management-ERP/src/app/tab2/tab2.page.html
@@ -25,7 +25,7 @@
           <h3 *ngIf = "task.isDirectAssignee && task.isAccepted == undefined" >Designated to: {{task.firstname}}  {{task.lastname}} </h3>
           <h3 *ngIf = "task.isAccepted" >accepted by: {{task.firstname}}  {{task.lastname}} </h3>
           <h3 *ngIf = "task.isAccepted == false">declined by: {{task.firstname}}  {{task.lastname}} </h3>
-          <p *ngIf = "task.isAccepted == false && task.declinedReason"> {{task.declinedReason}}</p>
+          <p *ngIf = "task.isAccepted == false && task.declinedReason" style = "color: gray"> {{task.declinedReason}}</p>
           <ion-row>
             <ion-col size = "7">
               <h3 > Deadline: {{task.deadline}}  </h3>
