--- a/Organization-Management-ERP/src/app/tab2/tab2.page.scss
+++ b/Organization-Management-ERP/src/app/tab2/tab2.page.scss
@@ -23,7 +23,8 @@ ion-segment-button {
     --background-checked: var(--sap-font-color-dark);
     --color-checked: white;
     --indicator-color : transparent!important; /* this solution */
-    --background:white
+    --background:white;
+    --color:black
   }
 
 ion-content{
