--- a/Organization-Management-ERP/src/app/register/register.component.html
+++ b/Organization-Management-ERP/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <ion-content class ="dark-background">
 	
   <ion-button  icon-only (click) = "closeModal();" class = "close-button" ><ion-icon name = "close" color = "secondary"></ion-icon></ion-button>
-    <h1 style = "color:white !important" >Registration</h1>
+    <h1 style = "color:#5a7da0 !important" >Registration</h1>
     <ion-card id = "registration-card">
     <div class = "input-information">
       <ion-item class = "dark-background">
@@ -36,13 +36,13 @@
       </div>
       <div >
       <ion-item class = "dark-background" *ngIf="isManager == false" >
-      <ion-label position = "floating">Organization Id</ion-label>
+      <ion-label position = "floating">Organization ID</ion-label>
       <ion-input type="text" [(ngModel)] = "organizationId"></ion-input>
       </ion-item>
       </div>
     </div>
       <div class = "next-step">		
-        <ion-button color = "secondary" (click) = "finishRegistration()"><span style = "color:black">Finish Registration</span></ion-button>
+        <ion-button color = "secondary" (click) = "finishRegistration()"><span style = "color:white">Finish Registration</span></ion-button>
       </div>
       </ion-card>
   </ion-content>
