--- a/Organization-Management-ERP/src/app/tab1/tab1.page.html
+++ b/Organization-Management-ERP/src/app/tab1/tab1.page.html
@@ -1,50 +1,52 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Open Tasks
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card class = "card"  *ngFor = "let task of tasks">
+ <div *ngFor = "let task of tasks" >
+  <ion-card class = "card"  *ngIf = "task.isAccepted == undefined">
     <ion-card-header  >
     <ion-card-title></ion-card-title>
       <ion-card-subtitle [class] ="task.style_class">
         <ion-grid>
           <ion-row>
-            <ion-col *ngIf = "task.priority == 1" size = "8">
+            <ion-col *ngIf = "task.priority == 1" size = "4.7">
               Low Priority
             </ion-col>
-            <ion-col *ngIf = "task.priority == 2" size = "8">
+            <ion-col *ngIf = "task.priority == 2" size = "4.7">
               Medium Priority
             </ion-col>
-            <ion-col *ngIf = "task.priority == 3" size = "8">
+            <ion-col *ngIf = "task.priority == 3" size = "4.7">
               High Priority
             </ion-col>
-            <ion-col>deadline: {{task.deadline}}</ion-col>
+            <ion-col size = "7.3" style = "color:black !important">deadline: {{task.deadline}}</ion-col>
           </ion-row>
         </ion-grid>
     </ion-card-subtitle>
     </ion-card-header>
     <ion-card-content class = "card-content">
   {{task.taskName}}  
-  <ion-grid class ="accept-decline" *ngIf = "task.isAccepted == undefined">
+  <ion-grid class ="accept-decline">
    <ion-row>
-      <ion-col > <ion-button style = "color:#45e437" (click) = "acceptJob(task)"> Accept <ion-icon name="checkmark-outline" ></ion-icon></ion-button> </ion-col>
-      <ion-col  > <ion-button  style = "color:#eb445a" (click) = "declineJob(task)">Decline <ion-icon name="close-outline"></ion-icon> </ion-button></ion-col>
+      <ion-col class = "col-center" > <ion-button color = "secondary" (click) = "acceptJob(task)" > Accept <ion-icon name="checkmark-outline" ></ion-icon></ion-button> </ion-col>
+      <ion-col class = "col-center"  > <ion-button color = "tertiary"  (click) = "declineJob(task)"  >Decline <ion-icon name="close-outline"></ion-icon> </ion-button></ion-col>
    </ion-row>
    </ion-grid>
   <div style ="margin-top:1rem">
-   <p *ngIf = "task.isAccepted != undefined && task.isAccepted" style = "color:#45e437"> Accepted</p>
-     <p *ngIf = "task.isAccepted != undefined && !task.isAccepted" style = "color:#eb445a"> Declined</p>
+   <p *ngIf = "task.isAccepted != undefined && task.isAccepted" class = "accept-but"> Accepted</p>
+     <p *ngIf = "task.isAccepted != undefined && !task.isAccepted"  class = "decline-but" > Declined</p>
   </div>
     </ion-card-content>
   </ion-card>
-
+</div>
   <ion-card class = "card"  *ngIf = "tasks.length ==0">
     <ion-card-header class ="card-header">
       <ion-card-subtitle > You have no tasks at this moment!</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
+
 </ion-content>
