trying to merge

--- a/Organization-Management-ERP/src/app/tab3/tab3.page.scss
+++ b/Organization-Management-ERP/src/app/tab3/tab3.page.scss
@@ -69,6 +69,7 @@ ion-content{
 ion-toolbar{
     --background:var(--sap-navigation-background);
     color:white;
+    text-align: center;
     ion-label{
         font-weight: var(--sap-font-weight);
         font-size: var(--sap-header-font-size);
