--- a/Organization-Management-ERP/src/app/tabs/tabs.page.html
+++ b/Organization-Management-ERP/src/app/tabs/tabs.page.html
@@ -12,8 +12,8 @@
     </ion-tab-button>
 
    <ion-tab-button tab="tab3" *ngIf = "!isManager">
-      <ion-icon name="alarm-outline"></ion-icon>
-      <ion-label>Schedule</ion-label>
+    <ion-icon name="file-tray-stacked-outline"></ion-icon>
+      <ion-label>History</ion-label>
     </ion-tab-button> 
 
     <ion-tab-button tab="tab4" *ngIf = "isManager">
