--- a/Organization-Management-ERP/src/app/tab3/tab3.page.scss
+++ b/Organization-Management-ERP/src/app/tab3/tab3.page.scss
@@ -90,11 +90,13 @@ ion-toolbar{
     color:#202124;
     float: right;
     margin-bottom: 1rem;
+    padding-top:1rem
 }
 .decline-but{
 color:#5E696E;
 float: right;
 margin-bottom: 1rem;
+padding-top:1rem;
 }
 .accept-decline{
     margin-top:1rem;
