--- a/Organization-Management-ERP/src/app/tab3/tab3.page.html
+++ b/Organization-Management-ERP/src/app/tab3/tab3.page.html
@@ -30,15 +30,21 @@
     </ion-card-header>
     <ion-card-content class = "card-content">
   {{task.taskName}}  
-  <ion-grid class ="accept-decline" *ngIf = "task.isAccepted == undefined">
-   <ion-row>
-      <ion-col class = "col-center" > <ion-button color = "secondary" (click) = "acceptJob(task)" > Accept <ion-icon name="checkmark-outline" ></ion-icon></ion-button> </ion-col>
-      <ion-col class = "col-center"  > <ion-button color = "tertiary"  (click) = "declineJob(task)"  >Decline <ion-icon name="close-outline"></ion-icon> </ion-button></ion-col>
-   </ion-row>
-   </ion-grid>
   <div style ="margin-top:1rem">
-   <p *ngIf = "task.isAccepted != undefined && task.isAccepted" class = "accept-but"> Accepted</p>
-     <p *ngIf = "task.isAccepted != undefined && !task.isAccepted"  class = "decline-but" > Declined</p>
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngIf = "task.isAccepted == true && !task.isCompleted">
+        <ion-button (click)="markComplete(task)" style = "--background:transparent;color:#678bc7">
+          <ion-icon slot="icon-only" name="checkmark-circle-outline"></ion-icon>
+        </ion-button>
+      </ion-col>
+      <ion-col>  
+        <p *ngIf = "task.isAccepted != undefined && task.isAccepted && !task.isCompleted" class = "accept-but"> Accepted</p>
+        <p *ngIf = "task.isAccepted != undefined && !task.isAccepted"  class = "decline-but" > Declined</p>
+        <p *ngIf = "task.isCompleted"  class = "decline-but" > Completed</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   </div>
     </ion-card-content>
   </ion-card>
